--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/platform-express": "^7.6.18",
+    "@nestjs/platform-socket.io": "^8.0.5",
     "@nestjs/typeorm": "^7.1.5",
+    "@nestjs/websockets": "^8.0.5",
     "cookie-parser": "^1.4.5",
     "mongoose": "^5.12.9",
     "passport": "^0.4.1",
